# QtAssimpOpenGlDemo

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  examplescene.cpp  examplescene.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/: CMakeLists.txt  qtkapi.h  qtkcamera3d.cpp  qtkcamera3d.h  qtkinput.cpp  qtkinput.h  qtkmesh.cpp  qtkmesh.h  qtkmeshrenderer.cpp  qtkmeshrenderer.h  qtkmodel.cpp  qtkmodel.h  qtkmodelmesh.cpp  qtkmodelmesh.h  qtkobject.cpp  qtkobject.h  qtkscene.cpp  qtkscene.h  qtkshaders.cpp  qtkshaders.h  qtkskybox.cpp  qtkskybox.h  qtktexture.cpp  qtktexture.h  qtktransform3d.cpp  qtktransform3d.h  qtkwidget.cpp  qtkwidget.h
